--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="btn-container">
                 <button class="btn btn-color-2" id="toggle-dark-mode">Dark Mode</button> 
 
-                <button class="btn btn-color-2" onclick="window.open('./assets/Resume.pdf')">Download
+                <button class="btn btn-color-2" onclick="window.open('./assets/resume.pdf')">Download
                     Resume</button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
             </div>
