--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#experience">Experiences</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li> <button class="btn-2 btn-color-2" id="toggle-dark-mode">Dark Mode</button> </li> 
             </ul>
         </div>
     </nav>
@@ -36,11 +37,13 @@
                     <li><a href="#experience" onclick="toggleMenu()">Experiences</a></li>
                     <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
                     <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
+                    <li> <button class="btn-3 btn-color-2" id="toggle-dark-mode">Dark Mode</button> </li> 
                 </ul>
             </div>
         </div>
-  
     </nav>
+    
+    
     <section id="profile">
         <div class="section__pic-container">
             <img src="./assets/profile.png" alt="Aditya More profile picture" class="main_pic">
@@ -50,8 +53,6 @@
             <h1 class="title">Shantanu Swami</h1>
             <p class="section__text__p2">Full-Stack/Blockchain/Game/Java Developer</p>
             <div class="btn-container">
-                <button class="btn btn-color-2" id="toggle-dark-mode">Dark Mode</button> 
-
                 <button class="btn btn-color-2" onclick="window.open('./assets/Resume.pdf')">Download
                     Resume</button>
                 <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
@@ -224,7 +225,7 @@
             <div class="about-containers">
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-1.png" alt="Project 1" class="project-img">
+                        <img src="./assets/project-2.png" alt="Project 1" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title">ChainzRegistry</h2>
                     <div class="btn-container">
@@ -237,7 +238,7 @@
                 </div>
                 <div class="details-container color-container">
                     <div class="article-container">
-                        <img src="./assets/project-2.png" alt="Project 2" class="project-img">
+                        <img src="./assets/project-1.png" alt="Project 2" class="project-img">
                     </div>
                     <h2 class="experience-sub-title project-title">ChainzCommerce</h2>
                     <div class="btn-container">
@@ -256,8 +257,8 @@
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn"
                             onclick="location.href='https://github.com/jaibhedia/CodeShetra'">Github</button>
-                        <button class="btn btn-color-2 project-btn" onclick="location.href=''">Live
-                            Demo</button>
+                        <!--<button class="btn btn-color-2 project-btn" onclick="location.href=''">Live
+                            Demo</button>-->
                     </div>
                 </div>
             </div>
@@ -270,11 +271,11 @@
         <div class="contact-info-upper-container">
             <div class="contact-info-container">
                 <img src="./assets/email.png" alt="email icon" class="icon contact-icon email-icon">
-                <p><a href="mailto:shantanuswamionline@gmail.com">shantanuswamionline@gmail.com</a></p>
+                <p><a href="mailto:shantanuswamionline@gmail.com">E-Mail</a></p>
             </div>
             <div class="contact-info-container">
                 <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon">
-                <p><a href="https://www.linkedin.com/in/aditya-more-myprofile/">LinkedIn</a></p>
+                <p><a href="https://www.linkedin.com/in/shantanuswami">LinkedIn</a></p>
             </div>
         </div>
     </section>
