--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
-                <li><a href="#experience">Experiences</a></li>
+                <li><a href="#experience">Skills</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li> <button class="btn-2 btn-color-2" id="toggle-dark-mode">Dark Mode</button> </li> 
@@ -34,7 +34,7 @@
             <div class="menu-links">
                 <ul>
                     <li><a href="#about" onclick="toggleMenu()">About</a></li>
-                    <li><a href="#experience" onclick="toggleMenu()">Experiences</a></li>
+                    <li><a href="#experience" onclick="toggleMenu()">Skills</a></li>
                     <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
                     <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
                     <li> <button class="btn-3 btn-color-2" id="toggle-dark-mode">Dark Mode</button> </li> 
@@ -46,7 +46,7 @@
     
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/profile.png" alt="Aditya More profile picture" class="main_pic">
+            <img src="./assets/profile.png" alt="Shantanu Swami profile picture" class="main_pic">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hey! There Myself</p>
@@ -284,7 +284,7 @@
             <div class="nav-links-container">
                 <ul class="nav-links">
                     <li><a href="#about">About</a></li>
-                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#experience">Skills</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
